--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         }
 
         h1 {
-            color: white;
+            color: rgb(226, 234, 241);
             font-size: 60px;
         }
 
